k8s/service-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: devops-demo
spec:
  selector:
    app: devops-demo
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
